--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,21 @@ email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 baseurl: ""
 url: "http://yourdomain.com"
+timezone: America/New_York
 
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+# Gem Settings
+gems:
+  - susy
+
+
+# Asset settings
+sass:
+  sass_dir: _sass
+  style: :compressed
+
+# Files to exclude
+exclude: ['Gemfile', 'Gemfile.lock']
