--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,7 @@ markdown: kramdown
 permalink: pretty
 
 # Gem Settings
-gems:
-  - susy
-  - bourbon
-  - breakpoint
+gems: []
 
 # Asset settings
 sass:
