Add normalize css
Normalize the css before styling

--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,10 @@
     "lehman"
   ],
   "private": true,
-  "devDependencies": {
+  "dependencies": {
     "susy": "~2.1.2",
     "bourbon": "~4.0.1",
-    "breakpoint": "~4.6.4"
+    "breakpoint": "~4.6.4",
+    "normalize.css.scss": "~3.0.2"
   }
 }
