Move bower components path
Ignore bower components from build as well as bower.json.

--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,8 @@ sass:
   style: :compressed
 
 # Files to exclude
-exclude: ['Gemfile', 'Gemfile.lock']
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - bower_components
+  - bower.json
