--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "susy": "~2.1",
     "bourbon": "~4.0",
     "compass-breakpoint": "~2.4",
-    "normalize-scss": "~3.0"
+    "normalize-scss": "~3.0",
+    "modular-scale": "~2.0"
   }
 }
