--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@ title: In Lehman's Terms
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://localhost:4000"
 timezone: America/New_York
+disqus_shortname: jdlehman
 
 # Build settings
 markdown: kramdown
