--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: In Lehman's Terms
-email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 baseurl: ""
 url: "http://localhost:4000"
 timezone: America/New_York
-disqus_shortname: jdlehman
+usernames:
+  disqus: jdlehman
 
 # Build settings
 # markdown: kramdown
