--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,15 @@ usernames:
   disqus: jdlehman
 
 # Build settings
-# markdown: kramdown
-# kramdown:
-#   input: GFM # github flavored markdown
 markdown: redcarpet
 redcarpet:
-    extensions: ["fenced_code_blocks", "autolink", "strikethrough", "lax_spacing", "superscript", "with_toc_data"]
+    extensions:
+      - fenced_code_blocks
+      - autolink
+      - strikethrough
+      - lax_spacing
+      - superscript
+      - with_toc_data
 permalink: pretty
 highlighter: rouge
 
@@ -21,6 +24,7 @@ highlighter: rouge
 gems:
   - jekyll-assets
 
+# Jekyll-assets settings
 assets:
   js_compressor:  uglifier
   css_compressor: sass
