--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 # Site settings
 title: In Lehman's Terms
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-baseurl: ""
-url: "http://localhost:4000"
+description: ""
 timezone: America/New_York
 usernames:
   disqus: jdlehman
@@ -10,13 +8,13 @@ usernames:
 # Build settings
 markdown: redcarpet
 redcarpet:
-    extensions:
-      - fenced_code_blocks
-      - autolink
-      - strikethrough
-      - lax_spacing
-      - superscript
-      - with_toc_data
+  extensions:
+    - fenced_code_blocks
+    - autolink
+    - strikethrough
+    - lax_spacing
+    - superscript
+    - with_toc_data
 permalink: pretty
 highlighter: rouge
 
