Create deploy rake task
- Deploys site to gh-pages branch
- Uses _config_production.yml

--- a/_config_production.yml
+++ b/_config_production.yml
@@ -1,5 +1,6 @@
 # Site settings
-production: false
+production: true
+baseurl: /in_lehmans_terms
 title: In Lehman's Terms
 description: ""
 timezone: America/New_York
@@ -27,10 +28,11 @@ gems:
 
 # Jekyll-assets settings
 assets:
-  js_compressor:
-  css_compressor:
-  cache:
-  cachebust: none
+  js_compressor:  uglifier
+  css_compressor: sass
+  cache: true
+  cachebust: hard
+  baseurl: /in_lehmans_terms/assets/
 
 # Files to exclude
 exclude:
