Update disqus shortname

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: In Lehman's Terms
 description: ""
 timezone: America/New_York
 usernames:
-  disqus: jdlehman
+  disqus: inlehmansterms
   twitter: inLehmans_Terms
   github: jdlehman
 
