--- a/_config_production.yml
+++ b/_config_production.yml
@@ -5,7 +5,7 @@ title: In Lehman's Terms
 description: ""
 timezone: America/New_York
 usernames:
-  disqus: jdlehman
+  disqus: inlehmansterms
   twitter: inLehmans_Terms
   github: jdlehman
 
