--- a/_config_production.yml
+++ b/_config_production.yml
@@ -3,6 +3,7 @@ production: true
 title: In Lehman's Terms
 description: ""
 timezone: America/New_York
+url: http://inlehmansterms.net
 usernames:
   disqus: inlehmansterms
   twitter: inLehmans_Terms
