--- a/_config_production.yml
+++ b/_config_production.yml
@@ -4,6 +4,8 @@ title: In Lehman's Terms
 description: ""
 timezone: America/New_York
 url: http://inlehmansterms.net
+paginate: 4
+excerpt_separator: <!--more-->
 usernames:
   disqus: inlehmansterms
   twitter: inLehmans_Terms
