Make use of tags
- Creating tags listing, with all tags and count
- Dynamically create page for eacht tag with post listings
- Add tags to top of each post

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 production: false
 title: In Lehman's Terms
-description: ""
+description: "The technical blog of Jonathan Lehman."
 timezone: America/New_York
 url: http://localhost:4000
 paginate: 4
